# mentoring

./: .gitignore  Cargo.toml  Justfile  README.md
server/: Cargo.toml  Justfile  defaults.env
server/migrations/2017-12-28-172600_init_db/: up.sql
server/src/: errors.rs  main.rs  models.rs  routes_static.rs  run.rs  schema.rs  util.rs
server/src/routes_api/: mod.rs
server/src/routes_api/auth/: login.rs  mod.rs  register.rs
web-client/: Cargo.toml  Justfile
web-client/src/: main.rs
web-client/src/model/: comment.rs  current_user.rs  mod.rs  project.rs  route.rs  tag.rs  user.rs
web-client/src/update/: mod.rs  msg.rs
web-client/src/view/: auth.rs  dashboard.rs  markdown.rs  mod.rs  navbar.rs  projects.rs  route.rs  user.rs
web-client/static/: index.html  styles.css
