[package]
name = "mentoring-server"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]

[dependencies]
bcrypt = "0.1.5"
bodyparser = "0.8.0"
diesel = { version = "1.0.0-rc1", features = ["sqlite"] }
dotenv = "0.10.1"
error-chain = "0.11.0"
iron = "0.6.0"
log = "0.4.0"
logger = "0.4.0"
mount = "0.4.0"
persistent = "0.4.0"
pretty_env_logger = "0.1.1"
router = "0.6.0"
serde = "1.0.26"
serde_derive = "1.0.26"
staticfile = "0.5.0"
void = "1.0.2"
