[package]
name = "mentoring-web-client"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]

[dependencies]
chrono = "0.4.0"
chrono-humanize = "0.0.10"
lazy_static = "1.0.0"
log = "0.4.1"
nom = "3.2.1"
pulldown-cmark = "0.1.0"
regex = "0.2.3"
serde_derive = "1.0.26"
stdweb = "0.2.0"
url = "1.6.0"
yew = { git = "https://github.com/DenisKolodin/yew.git" }
